# llog

./: .bumpversion.cfg  CMakeLists.txt  Makefile  README.md  TODO.md  conf.c  conf.h  csv.c  db_sqlite.c  db_sqlite.h  debug.h  getch.c  llog.c  llog.conf  llog.h  llog_Config.h.in  main.c  main_window.c  main_window.h  position.c  position.h  preferences_window.c  preferences_window.h
FK115/: FK115_calc.pl  doit.sh
SOTA_log_extractor/: sota_v2_log_extrat.pl
SOTA_summits_to_sqlite/: create.sh  summits.sql  summits_import.pl
YLOM_log_extractor/: ylom.pl
aux_db/: create_aux_db.py
calculations/: bifillar.m  solenoid.m  solenoid_r.m  wavelength.m
clock/: hamclock.sh
config/: ax25_start.sh  axports  direwolf.conf
cqpb_log_extractor/: cqbp.pl
db/: create.sh  llog.sql  mode.sql
gps_clients_wrappers/: cgps_run.sh
gui/: llog.desktop  llog.glade  llog.ui  main_window.glade
gui/test/: .gitignore  CMakeLists.txt  gtk4test.c
libllog/: libllog.pl  llog.py  test.py
llog/: .bumpversion.cfg  CMakeLists.txt  Makefile  conf.c  conf.h  csv.c  csv.h  db_sqlite.c  db_sqlite.h  debug.c  getch.h  llog.c  llog.conf  llog.h  llog_Config.h.in  main.c  main_window.c  main_window.h
llog/db/: create.sh  llog.sql
llog/gui/: llog.glade  main_window.glade
llog/llog2adif/: llog2adif.py
llog/pyllog/: llog.py  test.py
portable_station/: things.txt
portable_station/case/: case.FCStd  computer.FCStd  display.FCStd  ft-891.FCStd  tuner.FCStd
portable_station/computer/: Tinker_Board_2D_Drawing_alone.dxf  audio_interface.dxf  baseboard.dxf
sota_db/: .gitignore  summits_to_db.py
src/: CMakeLists.txt  band.c  band.h  conf.c  conf.h  db_sqlite.c  db_sqlite.h  export_window.c  export_window.h  exporter_writer.c  exporter_writer.h  llog.c  llog.h  llog_config.h.in  main.c  main_window.c  main_window.h  position.c  position.h  preferences_window.c  xml_client.c  xml_client.h
worldview/: wv.sh
