cmake_minimum_required (VERSION 3.13)
project(llog)

set(SHARE_DIR ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME})
set(DESKTOP_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/applications)
set(ICONS_FILE_DIR ${CMAKE_INSTALL_PREFIX}/share/icons)

set(DB_FILE_NAME llog.sql)
set(DB_FILE_PATH ${SHARE_DIR}/${DB_FILE_NAME})

set(AUX_DB_GEN_FILE_NAME create_aux_db.py)
set(AUX_DB_GEN_FILE_PATH ${SHARE_DIR}/${AUX_DB_GEN_FILE_NAME})

add_subdirectory(src)

install (FILES db/create_llog.sh
			DESTINATION bin
			COMPONENT bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
			GROUP_EXECUTE GROUP_READ
			WORLD_READ WORLD_EXECUTE)

install (FILES gui/llog.png db/${DB_FILE_NAME}
			DESTINATION ${SHARE_DIR}
			COMPONENT config
			PERMISSIONS OWNER_WRITE OWNER_READ
			GROUP_READ WORLD_READ)

install(FILES aux_db/create_aux_db.py
			DESTINATION ${SHARE_DIR}
			COMPONENT config
			PERMISSIONS OWNER_WRITE OWNER_READ
			GROUP_READ WORLD_READ)

install (FILES gui/llog.desktop
			DESTINATION ${DESKTOP_FILE_DIR}
			COMPONENT config
			PERMISSIONS OWNER_WRITE OWNER_READ
			GROUP_READ WORLD_READ)

install (FILES gui/llog.png
			DESTINATION ${ICONS_FILE_DIR}
			COMPONENT config
			PERMISSIONS OWNER_WRITE OWNER_READ
			GROUP_READ WORLD_READ)
